[package]
name = "adventofcode"
version = "0.1.0"
authors = ["Michael Daffin <michael@daffin.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
itertools = "0.9.0"
combine = "4.4.0"
nom = "6.0.1"
parse-display = "0.4.0"
thiserror = "1.0.22"
test-case = "1.0.0"
regex = "1.4.2"

[lib]
proc-macro = true
